# ws2812b-neopixel-stuff

./: .clang-format  .gitignore  README.md  format-all.sh
effects/: color_fade.cpp  color_fade.h  emergency.cpp  emergency.h  hsv_scroll.cpp  hsv_scroll.h  meteors.cpp  meteors.h  shimmer.cpp  shimmer.h  smoothrunners.cpp  smoothrunners.h  util.cpp  util.h  xmas_twinkles.cpp  xmas_twinkles.h
interface/: shim.cpp  shim.h
players/attiny85/: README.md
players/emulator/: CMakeLists.txt  README.md  emu.cpp  emu.h  glad.c  main.cpp
players/emulator/KHR/: khrplatform.h
players/emulator/glad/: glad.h
players/raspberrypi/: CMakeLists.txt  README.md  main.cpp
players/raspberrypi/libws2811/: clk.h  dma.h  gpio.h  libws2811.a-old  mailbox.h  print_stacktrace.h  pwm.h  rpihw.h  ws2811.h
players/raspberrypi/player/: CMakeLists.txt  config.txt  main.cpp
players/stm32/: README.md
